// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interface Reflection should compile basic interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: BasicInterface

Comments for BasicInterface

## Extended by

- [\`ExtendedInterface\`](ExtendedInterface.md)

## Properties

### ~~deprecatedProp~~

> **deprecatedProp**: \`string\`

#### Deprecated

This prop is deprecte

#### Some Tag

Comments for some tag

#### Source

[interfaces.ts:25](http://source-url)

***

### functionProp()

> **functionProp**: (\`s\`) => \`boolean\`

Comments for functionProper

#### Parameters

• **s**: \`string\`

Comment for param s

#### Returns

\`boolean\`

#### Source

[interfaces.ts:36](http://source-url)

***

### optionalProp?

> **\`optional\`** **optionalProp**: \`string\`

Comments for optional prop

#### Source

[interfaces.ts:30](http://source-url)

***

### prop

> **prop**: \`string\`

Comments for prop

#### Source

[interfaces.ts:14](http://source-url)

***

### propReturningObjectDeclaration

> **propReturningObjectDeclaration**: \`Object\`

Comments for propReturningObjectDeclaration

#### a

> **a**: \`boolean\`

#### b

> **b**: \`string\`

#### Source

[interfaces.ts:53](http://source-url)

***

### propReturningObjectDeclarations

> **propReturningObjectDeclarations**: \`Object\` & \`Object\`

Comments for propReturningObjectDeclarations

#### Type declaration

##### a

> **a**: \`boolean\`

##### b

> **b**: \`string\`

#### Type declaration

##### c

> **c**: \`boolean\`

##### d

> **d**: \`string\`

#### Source

[interfaces.ts:58](http://source-url)

***

### propReturningSignatureDeclaration()?

> **\`optional\`** **propReturningSignatureDeclaration**: () => \`string\` \\| \`number\` \\| \`boolean\`

Comments for propReturningSignatureDeclaration

#### Returns

\`string\` \\| \`number\` \\| \`boolean\`

#### Source

[interfaces.ts:41](http://source-url)

***

### propReturningSignatureDeclarations

> **propReturningSignatureDeclarations**: () => \`any\` & (\`paramsA\`, \`paramsB\`?) => \`any\` & (\`paramsC\`) => \`any\`

Comments for propReturningSignatureDeclarations

#### Source

[interfaces.ts:46](http://source-url)

***

### propWithProps

> **propWithProps**: \`Object\`

Comments for propWithProps

#### callbacks?

> **\`optional\`** **callbacks**: \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\>

Comments for callbacks

#### nestedPropA

> **nestedPropA**: \`string\`

Comments for nestedPropA

#### nestedPropB

> **nestedPropB**: \`boolean\`

Comments for nestedPropB

#### nestedPropC

> **nestedPropC**: \`Object\`

Comments for nestedPropC

#### nestedPropC.nestedPropCA

> **nestedPropCA**: \`string\`

Comments for nestedPropCA

#### nestedPropD()

> **nestedPropD**: () => \`boolean\`

Comments for nestedPropD

##### Returns

\`boolean\`

#### Source

[interfaces.ts:66](http://source-url)
"
`;

exports[`Interface Reflection should compile basic interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# BasicInterface

Comments for BasicInterface

## Extended by

- [\`ExtendedInterface\`](ExtendedInterface.md)

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| ~~\`deprecatedProp\`~~ | \`string\` | **Deprecated**<br />This prop is deprecte<br /><br />**Some Tag**<br />Comments for some tag |
| \`functionProp\` | (\`s\`: \`string\`) => \`boolean\` | Comments for functionProper |
| \`optionalProp?\` | \`string\` | Comments for optional prop |
| \`prop\` | \`string\` | Comments for prop |
| \`propReturningObjectDeclaration\` | \`Object\` | Comments for propReturningObjectDeclaration |
| \`propReturningObjectDeclaration.a\` | \`boolean\` | - |
| \`propReturningObjectDeclaration.b\` | \`string\` | - |
| \`propReturningObjectDeclarations\` | \`Object\` & \`Object\` | Comments for propReturningObjectDeclarations |
| \`propReturningSignatureDeclaration?\` | () => \`string\` \\| \`number\` \\| \`boolean\` | Comments for propReturningSignatureDeclaration |
| \`propReturningSignatureDeclarations\` | () => \`any\` & (\`paramsA\`: \`true\` \\| \`any\`[], \`paramsB\`?: \`any\`) => \`any\` & (\`paramsC\`: \`any\`) => \`any\` | Comments for propReturningSignatureDeclarations |
| \`propWithProps\` | \`Object\` | Comments for propWithProps |
| \`propWithProps.callbacks?\` | \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\> | Comments for callbacks |
| \`propWithProps.nestedPropA\` | \`string\` | Comments for nestedPropA |
| \`propWithProps.nestedPropB\` | \`boolean\` | Comments for nestedPropB |
| \`propWithProps.nestedPropC\` | \`Object\` | Comments for nestedPropC |
| \`propWithProps.nestedPropC.nestedPropCA\` | \`string\` | Comments for nestedPropCA |
| \`propWithProps.nestedPropD\` | () => \`boolean\` | Comments for nestedPropD |
"
`;

exports[`Interface Reflection should compile extended interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: ExtendedInterface

Comments for ExtendedInterface

## Extends

- [\`BasicInterface\`](BasicInterface.md)

## Properties

### ~~deprecatedProp~~

> **deprecatedProp**: \`string\`

#### Deprecated

This prop is deprecte

#### Some Tag

Comments for some tag

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`deprecatedProp\`](BasicInterface.md#deprecatedprop)

#### Source

[interfaces.ts:25](http://source-url)

***

### extendedProp

> **extendedProp**: \`string\`

#### Source

[interfaces.ts:109](http://source-url)

***

### functionProp()

> **functionProp**: (\`s\`) => \`boolean\`

Comments for functionProper

#### Parameters

• **s**: \`string\`

Comment for param s

#### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`functionProp\`](BasicInterface.md#functionprop)

#### Source

[interfaces.ts:36](http://source-url)

***

### optionalProp?

> **\`optional\`** **optionalProp**: \`string\`

Comments for optional prop

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`optionalProp\`](BasicInterface.md#optionalprop)

#### Source

[interfaces.ts:30](http://source-url)

***

### prop

> **prop**: \`string\`

Comments for prop

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`prop\`](BasicInterface.md#prop)

#### Source

[interfaces.ts:14](http://source-url)

***

### propReturningObjectDeclaration

> **propReturningObjectDeclaration**: \`Object\`

Comments for propReturningObjectDeclaration

#### a

> **a**: \`boolean\`

#### b

> **b**: \`string\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningObjectDeclaration\`](BasicInterface.md#propreturningobjectdeclaration)

#### Source

[interfaces.ts:53](http://source-url)

***

### propReturningObjectDeclarations

> **propReturningObjectDeclarations**: \`Object\` & \`Object\`

Comments for propReturningObjectDeclarations

#### Type declaration

##### a

> **a**: \`boolean\`

##### b

> **b**: \`string\`

#### Type declaration

##### c

> **c**: \`boolean\`

##### d

> **d**: \`string\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningObjectDeclarations\`](BasicInterface.md#propreturningobjectdeclarations)

#### Source

[interfaces.ts:58](http://source-url)

***

### propReturningSignatureDeclaration()?

> **\`optional\`** **propReturningSignatureDeclaration**: () => \`string\` \\| \`number\` \\| \`boolean\`

Comments for propReturningSignatureDeclaration

#### Returns

\`string\` \\| \`number\` \\| \`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningSignatureDeclaration\`](BasicInterface.md#propreturningsignaturedeclaration)

#### Source

[interfaces.ts:41](http://source-url)

***

### propReturningSignatureDeclarations

> **propReturningSignatureDeclarations**: () => \`any\` & (\`paramsA\`, \`paramsB\`?) => \`any\` & (\`paramsC\`) => \`any\`

Comments for propReturningSignatureDeclarations

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningSignatureDeclarations\`](BasicInterface.md#propreturningsignaturedeclarations)

#### Source

[interfaces.ts:46](http://source-url)

***

### propWithProps

> **propWithProps**: \`Object\`

Comments for propWithProps

#### callbacks?

> **\`optional\`** **callbacks**: \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\>

Comments for callbacks

#### nestedPropA

> **nestedPropA**: \`string\`

Comments for nestedPropA

#### nestedPropB

> **nestedPropB**: \`boolean\`

Comments for nestedPropB

#### nestedPropC

> **nestedPropC**: \`Object\`

Comments for nestedPropC

#### nestedPropC.nestedPropCA

> **nestedPropCA**: \`string\`

Comments for nestedPropCA

#### nestedPropD()

> **nestedPropD**: () => \`boolean\`

Comments for nestedPropD

##### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propWithProps\`](BasicInterface.md#propwithprops)

#### Source

[interfaces.ts:66](http://source-url)
"
`;

exports[`Interface Reflection should compile extended interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# ExtendedInterface

Comments for ExtendedInterface

## Extends

- [\`BasicInterface\`](BasicInterface.md)

## Properties

| Property | Type | Description | Inherited from |
| :------ | :------ | :------ | :------ |
| ~~\`deprecatedProp\`~~ | \`string\` | **Deprecated**<br />This prop is deprecte<br /><br />**Some Tag**<br />Comments for some tag | [\`BasicInterface\`](BasicInterface.md).\`deprecatedProp\` |
| \`extendedProp\` | \`string\` | - | - |
| \`functionProp\` | (\`s\`: \`string\`) => \`boolean\` | Comments for functionProper | [\`BasicInterface\`](BasicInterface.md).\`functionProp\` |
| \`optionalProp?\` | \`string\` | Comments for optional prop | [\`BasicInterface\`](BasicInterface.md).\`optionalProp\` |
| \`prop\` | \`string\` | Comments for prop | [\`BasicInterface\`](BasicInterface.md).\`prop\` |
| \`propReturningObjectDeclaration\` | \`Object\` | Comments for propReturningObjectDeclaration | [\`BasicInterface\`](BasicInterface.md).\`propReturningObjectDeclaration\` |
| \`propReturningObjectDeclaration.a\` | \`boolean\` | - | - |
| \`propReturningObjectDeclaration.b\` | \`string\` | - | - |
| \`propReturningObjectDeclarations\` | \`Object\` & \`Object\` | Comments for propReturningObjectDeclarations | [\`BasicInterface\`](BasicInterface.md).\`propReturningObjectDeclarations\` |
| \`propReturningSignatureDeclaration?\` | () => \`string\` \\| \`number\` \\| \`boolean\` | Comments for propReturningSignatureDeclaration | [\`BasicInterface\`](BasicInterface.md).\`propReturningSignatureDeclaration\` |
| \`propReturningSignatureDeclarations\` | () => \`any\` & (\`paramsA\`: \`true\` \\| \`any\`[], \`paramsB\`?: \`any\`) => \`any\` & (\`paramsC\`: \`any\`) => \`any\` | Comments for propReturningSignatureDeclarations | [\`BasicInterface\`](BasicInterface.md).\`propReturningSignatureDeclarations\` |
| \`propWithProps\` | \`Object\` | Comments for propWithProps | [\`BasicInterface\`](BasicInterface.md).\`propWithProps\` |
| \`propWithProps.callbacks?\` | \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\> | Comments for callbacks | - |
| \`propWithProps.nestedPropA\` | \`string\` | Comments for nestedPropA | - |
| \`propWithProps.nestedPropB\` | \`boolean\` | Comments for nestedPropB | - |
| \`propWithProps.nestedPropC\` | \`Object\` | Comments for nestedPropC | - |
| \`propWithProps.nestedPropC.nestedPropCA\` | \`string\` | Comments for nestedPropCA | - |
| \`propWithProps.nestedPropD\` | () => \`boolean\` | Comments for nestedPropD | - |
"
`;

exports[`Interface Reflection should compile indexable interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: IndexableInterface

Comments for IndexableInterface

## Indexable

 \\[\`s\`: \`string\`\\]: \`string\`

## Properties

### prop

> **prop**: \`string\`

#### Source

[interfaces.ts:117](http://source-url)
"
`;

exports[`Interface Reflection should compile indexable interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# IndexableInterface

Comments for IndexableInterface

## Indexable

 \\[\`s\`: \`string\`\\]: \`string\`

## Properties

| Property | Type |
| :------ | :------ |
| \`prop\` | \`string\` |
"
`;

exports[`Interface Reflection should compile interface with event properties: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithEventProperties

## Properties

### someProp?

> **\`optional\`** **someProp**: \`boolean\`

Description for prop someProp

#### Source

[interfaces.ts:129](http://source-url)

## Events

### anotherEvent

> **anotherEvent**: \`MouseEvent\`

#### Source

[interfaces.ts:141](http://source-url)

***

### ~~someEvent()?~~

> **\`optional\`** **someEvent**: (\`eventParam\`) => \`void\`

Description for event someEvent

#### Deprecated

Deprectaed comments

#### Parameters

• **eventParam**: [\`CustomEventInterface\`](CustomEventInterface.md)\\<\`MouseEvent\`\\>

Comments for param eventParam

#### Returns

\`void\`

#### Source

[interfaces.ts:136](http://source-url)
"
`;

exports[`Interface Reflection should compile interface with event properties: (Output File Strategy "members") (Option Group "2") 1`] = `
"# InterfaceWithEventProperties

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`someProp?\` | \`boolean\` | Description for prop someProp |

## Events

| Event | Type | Description |
| :------ | :------ | :------ |
| \`anotherEvent\` | \`MouseEvent\` | - |
| ~~\`someEvent?\`~~ | (\`eventParam\`: [\`CustomEventInterface\`](CustomEventInterface.md)\\<\`MouseEvent\`\\>) => \`void\` | Description for event someEvent<br /><br />**Deprecated**<br />Deprectaed comments |
"
`;

exports[`Interface Reflection should compile interface with flags: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithFlags

Comments for InterfaceWithFlags

## Properties

### expermintalProp?

\`Experimental\`

> **\`optional\`** **expermintalProp**: \`string\`

#### Source

[interfaces.ts:149](http://source-url)

***

### internalProp

\`Internal\`

> **internalProp**: \`string\`

#### Source

[interfaces.ts:151](http://source-url)
"
`;

exports[`Interface Reflection should compile interface with flags: (Output File Strategy "members") (Option Group "2") 1`] = `
"# InterfaceWithFlags

Comments for InterfaceWithFlags

## Properties

| Property | Flags | Type |
| :------ | :------ | :------ |
| \`expermintalProp?\` | \`Experimental\` | \`string\` |
| \`internalProp\` | \`Internal\` | \`string\` |
"
`;

exports[`Interface Reflection should compile interface with type parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithTypeParameters\\<A\\>

Comments for InterfaceWithTypeParameters

## Type parameters

• **A**

## Properties

### prop

> **prop**: \`A\`

Comments for prop

#### Source

[interfaces.ts:102](http://source-url)
"
`;

exports[`Interface Reflection should compile interface with type parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# InterfaceWithTypeParameters\\<A\\>

Comments for InterfaceWithTypeParameters

## Type parameters

| Type parameter |
| :------ |
| \`A\` |

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`A\` | Comments for prop |
"
`;
